# shuttlings-cch24

./: .gitignore  Cargo.toml  License.txt  README.md  Shuttle.toml
migrations/: 20241222051334_quote-book.down.sql
src/: main.rs
src/lib/: lib.rs  startup.rs  telemetry.rs
src/lib/routes/: day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  day_minus_one.rs  handlers.rs  mod.rs
tests/api/: day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  day_minus_one.rs  helpers.rs  main.rs
