[package]
name = "shuttlings-cch24"
version = "0.3.0"
edition = "2021"
description = "Solutions for the Shuttle Christmas Code Hunt 2024"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttlings-cch24.git"
license = "MIT"
publish = false

[[bin]]
name = "shuttlings-cch24"
path = "src/bin/main.rs"

[lib]
name = "shuttlings_cch24"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.41.1"
