[package]
name = "shuttlings-cch24"
version = "0.4.0"
edition = "2021"
description = "Solutions for the Shuttle Christmas Code Hunt 2024"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttlings-cch24.git"
license = "MIT"
publish = false

[[bin]]
name = "shuttlings-cch24"
path = "src/bin/main.rs"

[lib]
name = "shuttlings_cch24"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
http = "1.2.0"
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features =  false }
tokio = { version = "1.41.1", features = [ "net" ] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = [ "request-id", "trace", "util" ] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
