[package]
name = "shuttlings-cch24"
version = "0.19.1"
edition = "2021"
description = "Solutions for the Shuttle Christmas Code Hunt 2024"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
readme = "README.md"
repository = "https://github.com/sentinel1909/shuttlings-cch24.git"
license = "MIT"
publish = false

[[bin]]
name = "shuttlings-cch24"
path = "src/bin/main.rs"

[lib]
name = "shuttlings_cch24"
path = "src/lib/lib.rs"

[dependencies]
axum = { version = "0.7.9", features = [ "json" ] }
axum-extra = { version = "0.9.6", features = [ "typed-header" ] }
axum-macros = "0.4.2"
cargo-manifest = "0.17.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
http = "1.2.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json =  "1.0.134"
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features =  false }
shuttle-shared-db = { version = "0.49.0", features = [ "postgres", "sqlx" ] }
sqlx = { version = "0.8.2", features = [ "chrono", "uuid" ] }
tokio = { version = "1.41.1", features = [ "net", "time" ] }
toml = "0.8.19"
tower = "0.5.2"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = [ "request-id", "trace", "util" ] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = [ "json" ]}
testcontainers-modules = { version = "0.11.3", features = [ "postgres" ] }
